--- a/styles/main.css
+++ b/styles/main.css
@@ -15,23 +15,164 @@ background-repeat:no-repeat;
 	height:550px;
 	line-height:500px;
 	text-align:center;
+	opacity:0.7
 }
+.div_head {
+	background-color:#FBF8F1;
+	height: 75px;
+}
+
+.image_logo {
+	position:relative;height:75px; width:150px; left:100px
+}
+
+.head_li {
+	float:left;padding:8px 20px;position:relative;left:220px;top: -85px;font-size:20px;color:white
+}
+
+ .a {
+	text-decoration:none
+}
+.button_donate {
+	position:relative;left:220px;top :-85px;height:35px; width:150px;background:#FFFFFF;font-size:20px;border:2px solid #C8C8C8;border-radius:3px
+}
+
+.hero_h1 {
+	color:white;display:inline;position: relative;right: 30%
+}
+.button_student {
+	position:relative;top:-850px;font-size:20px; width:15%; height:50px; background: transparent;position:relative;bottom:410px;color:white;border:2px solid #C8C8C8
+}
+
+.button_tutor {
+	position:relative;font-size:20px;top: -850px;font-size:20px; width:15%; height:50px; background-color：#E8E8E;position:relative;bottom:410px;color:white;border:0;border-radius:3px
+}
+
 .div1 {
 	backgroud-color:#FFFFFF;
 	text-align:center
 }
+
+.div1_p {
+	position:relative;font-size:20px; width:15%; height:50px;position:relative;bottom:-80px;left:600px
+}
+.div1_article {
+	position:relative;margin: 2cm 3cm 4cm 10cm
+}
+.div1_button {
+	font-size:20px; width:15%; height:50px; background-color:#FEC650; position:relative;bottom:110px;left:-10px;border:0
+}
 .div2 {
-	background:#66FFCC;
-	height:600px;
+	background:#81C7A2;
+
+}
+
+.div2_image {
+	width:250px; height:250px;position:relative; left:300px; top:150px
+}
+
+.div2_p {
+	text-align:center;position:relative; left:100px; top:-180px;font-size:relative-size;font-size:50px;color:white
+}
+.div2_section {
+	position:relative;margin: -5cm 9cm 2cm 18cm;color:white
+}
+.div2_button {
+	position:relative; left:700px; top:-10px;width:18%; height:50px;font-size:20px;color:white;background:#6BA989;border:0
+}
+
+.div2_ul {
+	position:relative; left:1100px; top:-215px;color:white
 }
 .div3 {
-	background-color:#FFCC33
+	background-color:#FEC650
+}
+
+.div3_1 {
+	display:inline;position:relative; left:20%
+}
+.div3_P {
+	text-align:center; position:relative;top:100px;font-size:relative-size;font-size:30px;color:white; display:inline
+}
+.div3_section {
+	margin: 4cm 30cm 4cm 0cm;color:white
+}
+.div3_button {
+	width:15%; height:60px;position:relative;top:-50px;font-size:20px;color:white;background:#E4AF4A;border:0
+}
+.div3_image {
+	width:250px; height:250px;position:relative; left:55%; top:-300px
 }
 .div4 {
-	background-color:#33CCFF
+	background-color:#6D97C0
+}
+
+.div4_image {
+	width:250px; height:250px;position:relative; left:300px; top:150px
+}
+.div4_P {
+	text-align:center;position:relative; left:10px; top:-180px;font-size:relative-size;font-size:50px;color:white
+}
+
+.div4_section {
+	position:relative;margin: -5cm 12cm 2cm 16cm;color:white
+}
+
+.div4_button {
+	position:relative; left:600px; top:-40px;width:18%; height:50px;font-size:20px;color:white;background:#5B7EA2;border:0
 }
 .div5 {
 	background-color:#FFFFFF
+}
+
+.div_p {
+	text-align:center;position:relative; left:10px; top:-10px;font-size:relative-size;font-size:50px;color:black
+}
+.div5_1,.div5_2,.div5_3 {
+	position:relative;top:-180px;width:200px;height:200px;border:1px solid #C8C8C8;border-radius:5px
+}
+
+.div5_1 {
+	left:250px;
+	top:20px
+}
+
+.div5_2 {
+	left:550px;
+	top:-185px
+}
+
+.div5_3 {
+	left:850px;
+	top:-385px
+}
+.div5_p1_1,.div5_p1_2,.div5_p1_3 {
+	text-align:center;position:relative; left:5px; top:15px; font-size:40px
+}
+
+.div5_p1_1 {
+	color:#BDDFCA
+}
+
+.div5_p1_2 {
+	color:#FDC658
+}
+.div5_p1_3 {
+ color:#94B1CE;
+}
+.div5_p2_1,.div5_p2_2,.div5_p2_3 {
+	text-align:center;position:relative; left:5px; top:10px;font-size:20px
+}
+
+.div5_p2_1 {
+	color:#BDDFCA
+}
+
+.div5_p2_2 {
+	color:#FDC658
+}
+.div5_p2_3 {
+	 color:#94B1CE;
 }
 .footer {
 	background:#808080;
