--- a/styles/main.css
+++ b/styles/main.css
@@ -5,17 +5,24 @@ body {
 background-image:"images/hero.png”;
 background-repeat:no-repeat;
 }
-
+.content{
+	display: block;
+}
 .hero, .div1, .div2, .div3, .div4,.div5{width:auto;height:550px;maigin:0 auto}
 .hero {
 	background:url(../images/hero.png);
-	background-repeat:no;
+	background-repeat:yes;
 	background-position:center
 
 	height:550px;
 	line-height:500px;
 	text-align:center;
 	opacity:0.7
+}
+.head_li  a{
+	text-decoration:none;
+	color: gray;
+
 }
 .div_head {
 	background-color:#FBF8F1;
@@ -38,29 +45,34 @@ background-repeat:no-repeat;
 }
 
 .hero_h1 {
-	color:white;display:inline;position: relative;right: 30%
+	right: 400px;
+	color:white;display:inline;position: relative; font-size:20px
 }
 .button_student {
-	position:relative;top:-850px;font-size:20px; width:15%; height:50px; background: transparent;position:relative;bottom:410px;color:white;border:2px solid #C8C8C8
+	position:relative;font-size:20px; width:15%; height:50px; background: transparent;position:relative;bottom:410px;color:white;border:2px solid #C8C8C8
 }
 
 .button_tutor {
-	position:relative;font-size:20px;top: -850px;font-size:20px; width:15%; height:50px; background-color：#E8E8E;position:relative;bottom:410px;color:white;border:0;border-radius:3px
+	position:relative;font-size:20px;font-size:20px; width:15%; height:50px; background-color：#E8E8E;position:relative;bottom:410px;color:white;border:0;border-radius:3px
 }
 
 .div1 {
-	backgroud-color:#FFFFFF;
+	background-color:#FBF8F1;
 	text-align:center
 }
 
 .div1_p {
-	position:relative;font-size:20px; width:15%; height:50px;position:relative;bottom:-80px;left:600px
+	display: inline-block;
+	position:relative;font-size:20px; height:50px;position:relative;bottom:-80px;
 }
 .div1_article {
-	position:relative;margin: 2cm 3cm 4cm 10cm
+	position:relative;padding-top:100px;
+	padding-bottom: 30px;
+	width: 400px;
+	margin: 0 auto;
 }
 .div1_button {
-	font-size:20px; width:15%; height:50px; background-color:#FEC650; position:relative;bottom:110px;left:-10px;border:0
+	margin: 0 auto;font-size:20px; width:15%; height:50px; background-color:#FEC650; position:relative;border:0;border-radius: 5px;
 }
 .div2 {
 	background:#81C7A2;
@@ -72,7 +84,9 @@ background-repeat:no-repeat;
 }
 
 .div2_p {
-	text-align:center;position:relative; left:100px; top:-180px;font-size:relative-size;font-size:50px;color:white
+	display: inline-block;
+
+	text-align:center;position:relative; left:700px; top:-180px;font-size:50px;color:white
 }
 .div2_section {
 	position:relative;margin: -5cm 9cm 2cm 18cm;color:white
@@ -122,29 +136,33 @@ background-repeat:no-repeat;
 	position:relative; left:600px; top:-40px;width:18%; height:50px;font-size:20px;color:white;background:#5B7EA2;border:0
 }
 .div5 {
-	background-color:#FFFFFF
+	background-color:#FBF8F1
 }
 
-.div_p {
-	text-align:center;position:relative; left:10px; top:-10px;font-size:relative-size;font-size:50px;color:black
+.div5_p {
+	text-align:center;position:relative; left:400px; top:30px;font-size:relative-size;font-size:50px;color:black;display:inline
 }
 .div5_1,.div5_2,.div5_3 {
-	position:relative;top:-180px;width:200px;height:200px;border:1px solid #C8C8C8;border-radius:5px
+	position:relative;top:-80px;width:200px;height:200px;border:1px solid #C8C8C8;border-radius:5px
 }
 
 .div5_1 {
 	left:250px;
-	top:20px
+	top:100px;
+	height:200px;
+	width:200px
 }
 
 .div5_2 {
 	left:550px;
-	top:-185px
+	top:-100px
 }
 
 .div5_3 {
 	left:850px;
-	top:-385px
+	top:-300px;
+	height:200px;
+	width:200px
 }
 .div5_p1_1,.div5_p1_2,.div5_p1_3 {
 	text-align:center;position:relative; left:5px; top:15px; font-size:40px
