--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,5 @@
 body {
-
+	margin: 0
 }
 .a {
 background-image:"images/hero.png”;
@@ -7,12 +7,13 @@ background-repeat:no-repeat;
 }
 .content{
 	display: block;
+	font-family: 'Poiret One', sans-serif;
 }
 .hero, .div1, .div2, .div3, .div4,.div5{width:auto;height:550px;maigin:0 auto}
 .hero {
 	background:url(../images/hero.png);
 	background-repeat:yes;
-	background-position:center
+	background-position:center;
 
 	height:550px;
 	line-height:500px;
@@ -99,41 +100,61 @@ background-repeat:no-repeat;
 	position:relative; left:1100px; top:-215px;color:white
 }
 .div3 {
-	background-color:#FEC650
+	background-color:#FEC650;
+
 }
 
 .div3_1 {
-	display:inline;position:relative; left:20%
+	display:inline; float:left;width:50%
 }
 .div3_P {
-	text-align:center; position:relative;top:100px;font-size:relative-size;font-size:30px;color:white; display:inline
+	 margin-left: 300px;position:relative;font-size:30px;color:white; margin-top: 100px;
 }
 .div3_section {
-	margin: 4cm 30cm 4cm 0cm;color:white
+ color:white;display: block;
+	margin-left: 270px;
+	margin-top: 40px;
+	margin-right: 80px;
+	font-size:20px
 }
 .div3_button {
-	width:15%; height:60px;position:relative;top:-50px;font-size:20px;color:white;background:#E4AF4A;border:0
+	width:200px; height:60px;margin-left:320px;margin-top: 70px; font-size:20px;color:white;background:#E4AF4A;border:0
 }
 .div3_image {
-	width:250px; height:250px;position:relative; left:55%; top:-300px
+	display:inline;float:left;width:50%
 }
+
+.div3_image2 {
+	width:250px; height:250px;margin-top: 110px;
+}
+
 .div4 {
-	background-color:#6D97C0
+	background-color:#6D97C0;
+}
+
+.div4_1 {
+	display:inline; float:left;width:50%
 }
 
 .div4_image {
+	display:inline; float:left;width:50%
+}
+.div4_image2 {
 	width:250px; height:250px;position:relative; left:300px; top:150px
 }
 .div4_P {
-	text-align:center;position:relative; left:10px; top:-180px;font-size:relative-size;font-size:50px;color:white
+	text-align:center;font-size:50px;color:white;margin-top: 130px;margin-right: 600px;
 }
 
 .div4_section {
-	position:relative;margin: -5cm 12cm 2cm 16cm;color:white
+	margin-right: 300px;
+	margin-left: -30px;
+	font-size: 20px;
+	color:white
 }
 
 .div4_button {
-	position:relative; left:600px; top:-40px;width:18%; height:50px;font-size:20px;color:white;background:#5B7EA2;border:0
+	width:200px; height:50px;font-size:20px;color:white;background:#5B7EA2;border:0; margin-top: 30px;
 }
 .div5 {
 	background-color:#FBF8F1
